--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+board_build.filesystem = littlefs
 monitor_speed = 115200
 lib_deps = 
 	Wire
