--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	adafruit/Adafruit MAX31855 library@^1.4.0
 	bblanchon/ArduinoJson@^6.19.4
 	knolleary/PubSubClient@^2.8
+	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
