--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,6 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	knolleary/PubSubClient@^2.8
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	adafruit/MAX6675 library@^1.1.0
+	adafruit/Adafruit BusIO@^1.14.1
+	SPI
