--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
     "random": "cpp",
     "initializer_list": "cpp",
     "ranges": "cpp",
-    "regex": "cpp"
+    "regex": "cpp",
+    "istream": "cpp",
+    "functional": "cpp"
   }
 }
