--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,6 @@ board = esp12e
 framework = arduino
 board_build.filesystem = littlefs
 monitor_speed = 115200
-
-
 lib_deps = 
 	Wire
 	adafruit/Adafruit MAX31855 library@^1.4.0
@@ -25,3 +23,5 @@ lib_deps =
 	adafruit/MAX6675 library@^1.1.0
 	adafruit/Adafruit BusIO@^1.14.1
 	SPI
+	paulstoffregen/OneWire@^2.3.7
+	milesburton/DallasTemperature@^3.11.0
